##Snoop Project
v1.1.8_rus
* Блокировка/коррекция бессмысленных запросов.
(Номера телефонов — фильтруются; e-mails — корректируются).

* Добавлена возможность поиска username c пробелом.
($ python3 snoop.py "ivanov ivan")

* Добавлен новый метод детектирования username.salt.

* Добавлены в БС новые ресурсы.
(В БД  > 800 websites!!!).

* Утрата нескольких интернет-ресурсов.
===================================================================================

v1.1.7_rus
* Обновлён информативный вывод.

* Добавлены в БС новые ресурсы:
0k_clan;
1xforum;
33bru;
4gameforum;
7dach;
Allhockey;
Boxing;
Cyberclock;
Forum_amperka;
Forum_dklab;
Forum_gitarizm;
Forum_gorod;
Forum_navi;
Forums_battlefield;
Forums_ea;
Forums_eagle;
Forums_operationsports;
Forums_prosportsdaily;
Forum_theprodigy;
Forumvancouver;
Forum_vegalab;
Gog;
Hockeyforum;
Iphones;
Ladies;
Liveinternet;
Megane2;
Microcap_forum24;
Microchip;
Myjane;
Nhl;
Oper;
Otstrel;
Pathofexile;
Pepper;
Proglib;
Rasslabyxa;
Rcforum;
Rovlpj;
Rugby-forum;
Shazoo;
Skyscrapercity;
Space_dublikat;
Stalker-zone;
Talks;
Terminator;
Terminatorium;
Thesimsresource;
Truesteamachievements;
Tv-games;
Ubisoft;
Warhammergames;
Wirednewyork.
===================================================================================

v1.1.6_rus

(В БД  > 650 websites!!!).

* Добавлены в БС новые ресурсы:
4cheat;
Androidforums;
Aqa;
Archlinux;
B4x;
BleachFandom;
Blog_7ya;
Cfd-online;
Cheezburger;
Chevrolet-cruze-club;
Club_cnews;
Codecanyon;
Cracked_to;
Destructoid;
Devtribe;
Droidforums;
Edocr;
Eporner;
EtsyUser;
EuroFootball;
Forum_artinvestment;
Forum_djangoproject;
Forum_flin;
Forum_linuxfoundation;
Forum_muffingroup;
Forum_openframeworks;
ForumOszone;
Forum_reverse4you;
Forums_gentoo;
Forums_goha;
Forums_serebii;
Forums_universaldashboard;
Forum_ubuntu;
Forum_vingrad;
Fredmiranda;
Freesound;
Fullhub;
Furiffic;
Furry-fandom;
Geekgrade;
Gramho;
Hdseason;
Hoobly;
Illustrators;
Infosecinstitute;
Iphoneforums;
Ispdn;
Jetpunk;
Liebe69;
Linuxfr;