@@ -431,7 +431,7 @@
     "country": "\ud83c\uddf5\ud83c\uddf9",
     "country_klas": "PT",
     "errоrTypе": "status_code",
-    "url": "https://{}.en.aptoide.com/",
+    "url": "https://{}.en.aptoide.com/app",
     "urlMain": "https://en.aptoide.com/",
     "usernameOFF": "nousermengirl1945",
     "usernameON": "blue"
