@@ -8,6 +8,11 @@ v1.1.8_rus
 
 * Добавлен новый метод детектирования username.salt.
 
+* Исправлена метрика времени/ошибок опции '--verbose'.
+
+* Обновлён HTML-формат.
+(Chrome потребляет больше ресурсов, чем другие браузеры).
+
 * Добавлены в БС новые ресурсы.
 (В БД  > 800 websites!!!).
 
